--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | QR code component</title>
@@ -17,7 +17,7 @@
 <main>
     <article class="article-container">
         <section class="container-square">
-            <img src="/images/image-qr-code.png" alt="" class="qr">
+            <img src="images/image-qr-code.png" alt="" class="qr">
         </section>
         <section class="container-description">
             <h1> Improve your front-end skills by building projects</h1>
@@ -26,9 +26,11 @@
     </article>
 </main>
   
+<footer>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Esqueda Esquivel Eduardo Daniel</a>.
+   <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p> 
+    <p> Made with love  by <a href="https://github.com/00lar">Esqueda Esquivel Eduardo Daniel</a>.</p>
   </div>
+</footer>
 </body>
 </html>
